# stm32_g0_blink_cmake

./: CMakeLists.txt  STM32G0_toolchain.cmake
src/: main.cpp
